# VibingProsperity

./: .env.example  .gitignore  AGENTS.md  AGENT_FLOW.md  Makefile  README.md  algorithm.py  algorithm_best.py  autoresearch.py  autoresearch_live.py  autoresearch_orchestrator.py  backtest.py  data_analytics.py  datamodel.py  prepare.py  program.md  pyproject.toml
.cursor/rules/: prosperity-agent-loop.mdc
.github/workflows/: ci.yml
context/: Algorithmic Trading Strategy Explained.docx  Algorithmic Trading Strategy Explained.md  Writing an Algorithm in Python.md
reports/: INDEX.md  README.md  TEMPLATE.md
reports/official/: README.md  sample_submission_payload.json
reports/runs/: 20260325_230518_experiment.md  20260325_231046_experiment.md
scripts/: agent_cycle.py  agent_cycle_live.py  analyze_official_log.py  get_token.py  prosperity_token.py  report_utils.py  submit_live.py
tests/: test_analyze_official_log.py  test_prosperity_token.py  test_report_utils.py
typings/: datamodel.pyi
